--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "proshop",
-  "proxy": "http://localhost:5000",
+  "name": "plantaef",
+  "proxy": "https://plantae-backend.herokuapp.com/",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
