--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "plantaef",
-  "proxy": "https://plantae-backend.herokuapp.com/",
+  "name": "proshop",
+  "proxy": "http://localhost:5000",
   "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.12.4",
+    "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "jspdf": "^2.3.1",
-    "react": "^17.0.2",
+    "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
-    "react-dom": "^17.0.2",
+    "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^7.2.2",
