--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "proshop",
-  "proxy": "https://plantae-backend.herokuapp.com",
+  "name": "plantaef",
+  "proxy": "https://plantae-backend.herokuapp.com/",
   "version": "0.1.0",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
@@ -10,16 +10,16 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "jspdf": "^2.3.1",
-    "react": "17.0.2",
+    "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^7.2.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^2.1.3",
-    "react-to-pdf": "^0.0.14",
+    "react-to-pdf": "0.0.14",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
