--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^2.1.3",
-    "react-to-pdf": "0.0.14",
+    "react-to-pdf": "^0.0.13",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
