--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,35 @@
 
 
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+
+
 # dependencies
-node_modules
-node_modules/
+
+/node_modules
+
+/package-lock.json
+
 /.pnp
+
 .pnp.js
 
+
+
 # testing
+
 /coverage
 
-# production
-/frontend/build
 
-# misc
-.DS_Store
+
+# production
+
+/build
+
+
 
 npm-debug.log*
+
 yarn-debug.log*
+
 yarn-error.log*
