--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "connect-mongo": "^5.0.0",
+    "express-session": "^1.17.3",
     "jspdf": "^2.3.1",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
